# Practica_Simulada_Reto_Puzzlebot

./: .gitignore  README.md
scripts/: plot_map_pose.py
src/puzzlebot_controller/puzzlebot_controller/: simple_controller.py
src/puzzlebot_description/: CMakeLists.txt
src/puzzlebot_description/launch/: gazebo2.launch.py
src/puzzlebot_description/models/full_rack/: model.config  model.sdf
src/puzzlebot_description/models/full_rack/meshes/: full_rack.stl
src/puzzlebot_description/scripts/: world_editor.py
src/puzzlebot_description/urdf/: puzzlebot_gazebo.xacro  puzzlebot_mcr2.urdf.xacro
src/puzzlebot_description/worlds/: warehouse.world
src/puzzlebot_localization/: setup.py
src/puzzlebot_localization/launch/: mcl_real.launch.py
src/puzzlebot_localization/puzzlebot_localization/: map_utils.py  mcl_node.py  velocity_bridge.py
src/puzzlebot_localization_cpp/: CMakeLists.txt  README.md  package.xml
src/puzzlebot_localization_cpp/config/: ekf.rviz  ekf_params.yaml
src/puzzlebot_localization_cpp/include/puzzlebot_localization_cpp/: ekf.hpp  icp2d.hpp
src/puzzlebot_localization_cpp/launch/: ekf_localization.launch.py
src/puzzlebot_localization_cpp/scripts/: play_odom_bag.py  plot_map_pose.py  plot_odom.py
src/puzzlebot_localization_cpp/scripts/odom_bag/: metadata.yaml  odom_bag_0.db3
src/puzzlebot_localization_cpp/src/: ekf_localization_node.cpp  icp_node.cpp  kinematic_simulator_node.cpp  velocity_bridge_node.cpp
src/puzzlebot_navigation/: package.xml  setup.py
src/puzzlebot_navigation/config/: nav_params.yaml
src/puzzlebot_navigation/launch/: autonomous_nav.launch.py
src/puzzlebot_navigation/puzzlebot_navigation/: astar_planner_node.py  obstacle_spawner_node.py  path_follower_node.py
src/puzzlebot_navigation/rviz/: autonomous_nav.rviz
src/puzzlebot_slam/: README.md  package.xml  setup.py
src/puzzlebot_slam/config/: slam.rviz  slam_params.yaml
src/puzzlebot_slam/launch/: slam.launch.py
src/puzzlebot_slam/puzzlebot_slam/: icp.py  occupancy_grid.py  slam_node.py
